--- a/bundle.css
+++ b/bundle.css
@@ -44,6 +44,21 @@ input.HintInputBox.modificado{
 
 .HintSpace div{
 }
+
+.HintSpace p{
+  line-height: 1.2;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.HintSpace p:first-of-type{
+  margin-top: 12px;
+}
+
+
+.HintSpace p:last-of-type{
+  margin-bottom: 12px;
+}
 #app div{
   margin: 4px;
 }
